--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
   <p class='move-arrow'><i class="fa fa-arrow-down" aria-hidden="true"></i></p>
   <div class='main-direct'>
-  <span>She Likes To...</span>
+  <span>and she Likes To...</span>
 </div>
 </nav>
 <div class='goof-container'>
@@ -34,6 +34,11 @@
   <div class='bottom-text-container'>
   <span class="bottom-text">Well, this isn't Stacy, but...</span>
 </div>
+</div>
+<div class="race-info">
+  <img class="map" src="http://www.outerbanksmarathon.com/assets/Maps/OBSE_OBMMap.jpg" alt="marathon map">
+  <p>&nbsp; <i class='big-o'>O</i>n November 12, She's <i class='purple'>traveling</i> to the outer banks to <i class="purple">run</i> The Southern Fried Half Marathon! Followed by a little <i class="purple">goofing off</i>. But running 13 miles aint easy! So please send her some words of encouragement bellow, and let her know you're rooting for her. Then, (if you can) please donate to The Independent Animal Rescue on her behalf. <i class="purple">GO STACY!</i></p>
+
 </div>
 
 
