--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </div>
   <p class='move-arrow'><i class="fa fa-arrow-down" aria-hidden="true"></i></p>
   <div class='main-direct'>
-  <span>and she Likes To...</span>
+  <span>and she likes to...</span>
 </div>
 </nav>
 <div class='goof-container'>
@@ -32,13 +32,28 @@
 <div class='run-container'>
   <span class='animated-text appear run-text'>run.</span>
   <div class='bottom-text-container'>
-  <span class="bottom-text">Well, this isn't Stacy, but...</span>
+  <span class="bottom-text">Well, THIS isn't Stacy, but...</span>
 </div>
 </div>
 <div class="race-info">
   <img class="map" src="http://www.outerbanksmarathon.com/assets/Maps/OBSE_OBMMap.jpg" alt="marathon map">
-  <p>&nbsp; <i class='big-o'>O</i>n November 12, She's <i class='purple'>traveling</i> to the outer banks to <i class="purple">run</i> The Southern Fried Half Marathon! Followed by a little <i class="purple">goofing off</i>. But running 13 miles aint easy! So please send her some words of encouragement bellow, and let her know you're rooting for her. Then, (if you can) please donate to The Independent Animal Rescue on her behalf. <i class="purple">GO STACY!</i></p>
-
+  <p>&nbsp; <i class='big-o'>O</i>n November 12, she's <i class='purple'>traveling</i> to the outer banks to <i class="purple">run</i> The Southern Fried Half Marathon! Followed by a little <i class="purple">goofing off</i>. But running 13 miles aint easy! So please send her some words of encouragement below, and let her know you're rooting for her. Then, (if you can) please donate to The Independent Animal Rescue on her behalf. <i class="purple">GO STACY!</i></p>
+</div>
+<div class="email-donate">
+  <div class="email">
+    <p class="email-title">Yer Awesome Email</p>
+    <form action="https://formspree.io/sngray17@gmail.com"
+      method="POST">
+    <input class="name" type="text" placeholder="Yer Awesome Name" name="name"/>
+    <input class="subject" type="text" placeholder="Yer Awesome Subject" name="_subject"/>
+    <textarea class="email-body" name="message" placeholder=" Hey Stacy! Yer gonna take down that southern fried marathon faster than a basket of hush puppies!"></textarea>
+    <button id="send-btn" type="submit" value="Send"><span>Send</span></button>
+</form>
+  </div>
+  <div class="donate">
+    <p>Donate!</p>
+    <a href="http://www.animalrescue.net/donate"><img src="images/IARlogo.jpg"></a>
+  </div>
 </div>
 
 
